# chess-ratings

./: .gitignore  Dockerfile  Dockerfile_Agent  Dockerfile_Flows  README.md  TODO.md  pyproject.toml
.github/actions/blocks/: action.yml  blocks.py
.github/actions/container-image/: action.yml
.github/actions/deploy-container/: action.yml
.github/actions/deploy-container-to-compute-engine/: action.yml
.github/actions/deploy-flows/: action.yml
.github/workflows/: blocks.yml  deploy-container.yml  deploy-flows.yml  prefect-deploy-agent-to-gcp-vm.yml  prefect-deploy-blocks-and-flows.yml  prefect-deploy-flows.yml  prefect.yml  quick-start.yml  terraform.yml
chess_ratings_pipeline/core/integrations/: fide.py  google_bigquery.py  google_cloud_storage.py
chess_ratings_pipeline/core/logging_messages/: logging_messages.py
chess_ratings_pipeline/flows/: build_all_dbt_models.py  elt_cdc_profiles.py  elt_cdc_stats.py  elt_fide_ratings.py  test__create_external_bq_table_from_cdc_stats.py  test__create_external_bq_table_from_fide_ratings.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/staging/: _cdc__chess_stats.yml  _cdc__profiles.yml  _fide__ratings.yml  stg_cdc__chess_stats.sql  stg_cdc__profiles.sql  stg_fide__ratings.sql
prefect/flows/: ingest_cdc_player_stats_web_to_gcs.py  ingest_cdc_profiles_web_to_gcs.py  ingest_chess_dot_com_web_to_gcs.py  ingest_fide_ratings_web_to_gcs.py  ingest_web_to_gcs.py  load_files_gcs_to_bq.py
prefect/flows/utils/: chess_dot_com_api.py  chess_ratings_data_model.py  dates.py  game_format.py  (+1 more)
terraform/: main.tf  variables.tf
(+14 files in other folders)
